# code-archives

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: run_test.yml
common_designs/src/: registry.py
container_api/: README.md  docker-compose.yml
container_api/backend/: dockerfile
container_api/client/: dockerfile  requirements.txt
context_manager/src/: error_handled.py
data-engineering/dbt_separate_env/: .user.yml  dbt_project.yml  profiles.yml
data-engineering/snowflake-marketplace/: dockerfile  manifest.yml
dbt_separate_env/: profiles.yml
dbt_separate_env/snowflake_ws/: databases_setup.sql
go/channel/: go.mod  goroutine.go  sequential.go
go/concurrency/: go.mod
go/data-structure/: ordered_array.go  ordered_array_test.go
graphql/: docker-compose.dev.yaml  dockerfile.dev  pyproject.toml
graphql/src/: 1_query_on_objects.py  main.py  mutations.py
k8s/: README.md
k8s/blue-green-deployment/: README.md  app-service.yaml  blue-deployment.yaml  green-deployment.yaml
logstash/: INDEX.md  README.md
logstash/filebeat-to-logstash/: docker-compose.yaml
logstash/http/: README.md  (+1 more)
logstash/monitoring-tool/: docker-compose.dev.yaml  dockerfile.dev  pyproject.toml
logstash/monitoring-tool/src/: __init__.py  perf_report.py
python/: HOWTO.md  README.md
python/simple-event-gen/: README.md  pyproject.toml
python/simple-event-gen/examples/: config1.py
python/simple-event-gen/src/: cli.py  eventgen.py  eventsend.py  eventsgen.py
snowflake-marketplace/: dockerfile  manifest.yml
streamlit-components/: docker-compose.dev.yaml  dockerfile.dev
template/: compose-dev.yaml  docker-compose.dev.yaml  pyproject.toml
(+116 files in other folders)
