[tool.poetry]
name = "template"  #TODO change this
version = "0.1.0"
description = "\"template folder for Python Archive\""
authors = ["Toby <40096033+tobytoyin@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "src"}
]

# [tool.poetry.scripts]
# cli_name = "cli.module:function"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
