[tool.poetry]
name = "eventsgen"
version = "0.1.0"
description = "\"template folder for Python Archive\""
authors = ["Toby <40096033+tobytoyin@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
eventsgen = "src.cli:eventsgen_cli"

[tool.poetry.dependencies]
python = "^3.11"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
